--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "gridsome": "^0.7.0",
     "vue-backtotop": "^1.6.1",
+    "vue-scroll-up": "^1.0.3",
     "vue-scrollto": "^2.18.1"
   }
 }
