--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
+    "@inotom/vue-go-top": "^1.3.0",
     "gridsome": "^0.7.0",
     "vue-backtotop": "^1.6.1",
-    "vue-scroll-up": "^1.0.3",
     "vue-scrollto": "^2.18.1"
   }
 }
