--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "gridsome": "^0.7.0",
+    "vue-backtop-pack": "^0.2.0",
     "vue-backtotop": "^1.6.1",
     "vue-scrollto": "^2.18.1"
   }
